--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,18 +3,18 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "4.4.2",
-    "com.unity.ai.navigation": "2.0.0",
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.ide.rider": "3.0.26",
+    "com.unity.ai.navigation": "2.0.3",
+    "com.unity.collab-proxy": "2.4.4",
+    "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.8.0-pre.2",
-    "com.unity.purchasing": "4.10.0",
-    "com.unity.test-framework": "1.4.1",
-    "com.unity.timeline": "1.8.6",
+    "com.unity.inputsystem": "1.9.0",
+    "com.unity.purchasing": "4.12.2",
+    "com.unity.test-framework": "1.4.5",
+    "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.xr.management": "4.4.0",
-    "com.unity.xr.oculus": "4.1.2",
-    "com.unity.xr.openxr": "1.9.1",
+    "com.unity.xr.management": "4.5.0",
+    "com.unity.xr.oculus": "4.2.0",
+    "com.unity.xr.openxr": "1.12.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
